--- a/ch03/src/main/webapp/ex08.html
+++ b/ch03/src/main/webapp/ex08.html
@@ -9,6 +9,28 @@ body {
 	margin:10px;
 	padding:10px;
 }
+
+.box {
+	position: absolute;
+	width: 200px;
+	height: 100px;
+	background-color: #00f;
+	left: 250px;
+	
+}
+
+
+#box1 {
+	background-color: #00f;
+	left: 250px;
+	top: 100px;
+}
+
+#box2 {
+	background-color: #f00;
+	left: 200px;
+	top: 150px;
+}
 </style>
 </head>
 
@@ -21,5 +43,13 @@ body {
     <li>리스트의 bullet 을 백그라운드로 사용가능합니다.</li>
     <li>리스트의 bullet 을 백그라운드로 사용가능합니다.</li>
 </ul>
+
+<div class="box" id="box1">
+	박스입니다.
+</div>
+
+<div class="box" id="box2">
+	박스입니다.
+</div>
 </body>
 </html>
