--- a/ch04/src/main/webapp/ex04.html
+++ b/ch04/src/main/webapp/ex04.html
@@ -8,6 +8,7 @@ p.text1 {
 	font-family: "맑은 고딕";
 	font-size: 24px;
 	line-height:28px;
+	text-align:justify;
 }
 p.text2 {
 	font-family: "맑은 고딕";
@@ -21,7 +22,6 @@ p.text3 {
 	font-size: 0.75em;
 	color:#3366FF;
 	line-height:14px;
-	text-align:
 }
 
 
