--- a/ch04/src/main/webapp/ex05.html
+++ b/ch04/src/main/webapp/ex05.html
@@ -35,7 +35,7 @@ p.text2 span {
 
 p.cap {
 	text-transform: capitalize;
-	letter-spacing:20px;
+	letter-spacing:0px;
 }
 
 p.up {
@@ -47,6 +47,15 @@ p.word_space {
 	word-spacing:10px;
 }
 
+p.text3 {
+	height: 20px;
+	border: 1px solid #999;
+	
+	width: 70px;			/* 텍스트 컨텐츠를 가지고 있는 엘리먼트의 너비 */
+	white-space: nowrap;	/* 줄바꿈 금지 -> 한줄로 처리*/
+	overflow: hidden; 		/* 글자 길이가 너비를 넘어가는 경우 보이지 않게 처리*/
+	text-overflow: ellipsis; /* */
+}
 
 </style>
 </head>
@@ -64,5 +73,6 @@ p.word_space {
 <p>면적을 나타내는 단위는 cm<span class="vertical">2</span>, m<span class="vertical">2</span>, km<span class="vertical">2</span> 등이 있습니다.</p>
 <p class="word_space"> 단어와 단어 사이의 간격을 조절합니다.</p>
 
+<p class="text3" title="영문자는 abc로 시작됩니다.">영문자는 abc로 시작됩니다.</p>
 </body>
 </html>
