--- a/ch06/src/main/webapp/ex03.html
+++ b/ch06/src/main/webapp/ex03.html
@@ -8,5 +8,23 @@
 	<h1>BOM(Browser Object Model)</h1>
 	<h2>3. localtion 객체</h2>
 	<h3>Refresh Page 하는 방법</h3>
+	
+	<!-- 방법1: F5: cached -->
+	<button onclick="location = location;">refresh01</button>
+	
+	<!-- 방법2: F5: cached  -->
+	<button onclick="location.href = location.href;">refresh02</button>
+	
+	<!-- 방법3: F5: cached  -->
+	<button onclick="location.assign('')">refresh03</button>
+	
+	<!-- 방법4: F5: cached  --> <!-- 제일 추천 --> 
+	<button onclick="location.replace(location)">refresh04</button>
+	
+	<!-- 방법5: Ctrl + F5 no cached--> 
+	<button onclick="locatio.reload();">refresh05</button>
+	
+	<h3>Redirect 하는 법</h3>
+	<button onclick="location.href='http://www.douzone.com'">우리 회사 가기</button>
 </body>
 </html>
