--- a/ch06/src/main/webapp/ex09.html
+++ b/ch06/src/main/webapp/ex09.html
@@ -7,26 +7,35 @@
 window.addEventListener("load", function(){
    var imgElement = document.createElement("img");
    
-   // setAttribute/getAttribute 사용
+   // (표준속성 attribute[prop(o)], 비표준속성 attribute[prop(x)]) 를 읽기/쓰기
+   // getAttribute/setAttribute를 사용한다.
    // 표준 Attribute =>  property 	(o) 
    imgElement.setAttribute("src", "http://cdn.lecturernews.com/news/photo/202109/75977_276099_2749.jpg");
    imgElement.setAttribute("style","width:200px");
    imgElement.setAttribute("alt", '탑건!');
+   imgElement.setAttribute("no1", 10); // 비표준 속성은 사용할 때 prefix 'data-'를 달아 'data-no1'로 사용한다
+
+   imgElement['no2'] = 10; // 비표준 속성은 사용할 때 prefix 'data-'를 달아 'data-no2'로 사용한다
+   imgElement['title'] = '루피만세~';
+   
+   imgElement['data-no3'] = 10; 
    
    // property =>  표준 Attribute	(o)
-   imgElement["title"] = '탑건만세~~';
+   // imgElement["title"] = '탑건만세~~';
 
    // property =>  비표준 Attribute	(x)
-   imgElement['no'] = 10; 		
+   // imgElement['no'] = 10; 		
    
    // 비표준 attribute, property (x)
    // 왜 property 가 되지 않지?
    imgElement.setAttribute('data-no', 10);  
+   
    setTimeout(function(){
       document.body.appendChild(imgElement);
-      console.log(imgElement['no'], imgElement.getAttribute("no"));
-      console.log(imgElement.alt, imgElement['data-no'], imgElement.getAttribute("data-no"));
- 
+      console.log(imgElement.alt, imgElement.getAttribute.no1);
+      console.log(imgElement.getAttribute("no2"), imgElement.getAttribute("title"));
+      console.log(imgElement.getAttribute("no3"));
+ 		
 
    },2000);
 });
