--- a/ch05/src/main/webapp/tabbox02.html
+++ b/ch05/src/main/webapp/tabbox02.html
@@ -4,21 +4,22 @@
 <meta charset="utf-8">
 <title>리스트를 이용한 메뉴 만들기</title>
 <link rel="stylesheet" type="text/css" href="tabbox.css"></link>
-<script src="tabbox.js">
+<script src="tabbox.js"></script>
+<script>
 tabBox.init();
 </script>
 </head>
 <body>
 <div class="tab-box">
-	<ul>
-        <li>메뉴5</li>
-        <li>메뉴4</li>
-        <li>메뉴3</li>
-        <li>메뉴2</li>
-        <li>메뉴1</li>
+   <ul>
+        <li>메뉴 5</li>
+        <li>메뉴 4</li>
+        <li>메뉴 3</li>
+        <li>메뉴 2</li>
+        <li>메뉴 1</li>
     </ul>
     <div>
-    	탭뷰입니다.
+       탭뷰입니다.
     </div>
 </div>    
 </body>
