browser programming: jquery

--- a/ch07/src/main/webapp/ex04.html
+++ b/ch07/src/main/webapp/ex04.html
@@ -6,7 +6,8 @@
 <script>
 $(function(){
 	setTimeout(function(){
-	}, 2000);
+		$("li").css('text-decoration', 'underline');
+	}, 1000);
 });
 </script>
 
