--- a/ch07/src/main/webapp/ex05.html
+++ b/ch07/src/main/webapp/ex05.html
@@ -6,6 +6,10 @@
 <script>
 $(function(){
 	setTimeout(function(){
+		$("#first").css('color','#0f0');
+		$("#second").css('color','#f00');
+		$("#third").css('color','#00f');
+		$("#fourth").css('color','#fff');
 	}, 2000);
 });
 </script>
