--- a/ch07/src/main/webapp/ex02.html
+++ b/ch07/src/main/webapp/ex02.html
@@ -3,9 +3,44 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script type="text/javascript" src="jquery/jquery-3.6.0.js"></script>
+<script>
+// jQuery는 DOM 엘리먼트를 선택하는 작업을 보통 먼저 하기 때문에
+// DOM 로딩이 완료된 후에 작업틀을 코드로 작성한다.
+
+// 1. DOM이 완료된 시점: DOM API 사용
+window.addEventListener("load", function(){
+	var $obj = $("#header");
+	console.log($obj.length);
+});
+
+// 2. DOM이 완료된 시점: jQuery를 사용하는 방법1
+$(document).ready(function(){
+	var $obj = $("#header");
+	console.log($obj.length);
+});
+
+// 3. DOM이 완료된 시점: jQuery를 사용하는 방법2: 추천
+$(function(){
+
+	// 반환되는 jQuery Object는 절대 null이거나 undefined가 될 수 없다.
+	var $obj = $("#none");
+	console.log($obj !== null, $obj !== undefined, typeof($obj));
+
+	// 반환되는 jQuery Object는 유사 배열이다.
+	var $obj = $("ul li");
+	console.log($obj.length, $obj[0], $obj instanceof Array);
+
+})
+</script>
 </head>
 <body>
 	<h1 id="header">jQuery 함수로 HTMLElement를 선택하는 시점</h1>
+	<ul>
+		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
+		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
+		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
+		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
+	</ul>
 </body>
 </html>
  
