--- a/ch07/src/main/webapp/ex09.html
+++ b/ch07/src/main/webapp/ex09.html
@@ -6,6 +6,9 @@
 <script>
 $(function(){
 	setTimeout(function(){
+		$("li > strong").css("font-weight","normal");
+		$("li > div > strong").css("color","blue");
+
 	}, 1000);
 });
 </script>
