--- a/ch07/src/main/webapp/ex11.html
+++ b/ch07/src/main/webapp/ex11.html
@@ -6,6 +6,9 @@
 <script>
 $(function(){
 	setTimeout(function(){
+		$('#second+li').css("color", "red");
+		$('#second++li').css("color", "blue");
+
 	}, 1000);
 });
 </script>
