--- a/ch07/src/main/webapp/ex13.html
+++ b/ch07/src/main/webapp/ex13.html
@@ -6,6 +6,10 @@
 <script>
 $(function(){
 	setTimeout(function(){
+		$('li[id]').css('color','red');
+		$('li[class="second"]').css('color','blue');
+		$('li[class!="second"]').css('font-weight','bold');
+
 	}, 1000);
 });
 </script>
