--- a/ch07/src/main/webapp/ex04.html
+++ b/ch07/src/main/webapp/ex04.html
@@ -6,7 +6,8 @@
 <script>
 $(function(){
 	setTimeout(function(){
-		$("li").css('text-decoration', 'underline');
+		var $obj = $("li");
+		$obj.css('text-decoration', 'underline');		
 	}, 1000);
 });
 </script>
