--- a/ch07/src/main/webapp/ex05.html
+++ b/ch07/src/main/webapp/ex05.html
@@ -6,10 +6,10 @@
 <script>
 $(function(){
 	setTimeout(function(){
-		$("#first").css('color','#0f0');
-		$("#second").css('color','#f00');
-		$("#third").css('color','#00f');
-		$("#fourth").css('color','#fff');
+		$("#first").css('color', '#f00');
+		$("#second").css('color', '#0f0');
+		$("#third").css('color', '#00f');
+		$("#fourth").css('color', '#ff0');
 	}, 2000);
 });
 </script>
