--- a/ch07/src/main/webapp/ex17.html
+++ b/ch07/src/main/webapp/ex17.html
@@ -6,6 +6,9 @@
 <script>
 $(function(){
 	setTimeout(function(){
+		$("#p1").text("1.안녕하세요");
+		$("#p2").text("2.<strong>안녕하세요</strong>");
+		console.log($("#p3").text());
 	}, 1000);
 });
 </script>
