--- a/ch05/src/main/webapp/tabbox03.html
+++ b/ch05/src/main/webapp/tabbox03.html
@@ -4,7 +4,9 @@
 <meta charset="utf-8">
 <title>리스트를 이용한 메뉴 만들기</title>
 <link rel="stylesheet" type="text/css" href="tabbox.css"></link>
-<script src="tabbox02.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script src="tabbox03.js"></script>
 <script>
 tabBox.init();
 </script>
